# sandy

./: .envrc.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SPORTS_API_RESEARCH.md  deploy.sh  pyproject.toml  restart.sh  sandy.sh  sandy.toml.example  slack-app-manifest.json  test-run.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  docker-build.yml
deploy/: install.sh  sandy.service
docs/: SPOTIFY-AUTH-TODO.md
docs/plans/: 2026-03-10-sandy-mvp.md  2026-03-17-cross-device-communication.md
docs/plugins/: config.md  cryptics.md  hardcover.md  real_men.md
docs/specs/: 2026-03-10-sandy-mvp-design.md  2026-03-17-cross-device-communication-design.md
sandy/: actors.py  cli.py  config.py  daemon.py  loader.py  matcher.py  oauth_server.py  observability.py  pipeline.py  printer.py  progress.py  transport_loader.py
sandy/plugins/: base.py  cast_to_tv.py  cryptics.py  dispatch.py  estimatedtaxes.py  gif_translator.py  hardcover.py  health.py  help.py  itguy.py  music_discovery.py  printer_status.py  real_men.py  sports.py  spotify.py  youtube_tv.py
sandy/transports/: slack.py
tests/: conftest.py  test_actors.py  test_cast_to_tv.py  test_cli.py  test_config.py  test_cryptics.py  test_daemon.py  test_dispatch_plugin.py  test_estimatedtaxes_plugin.py  test_gif_translator.py  test_hardcover.py  test_health_plugin.py  test_help_plugin.py  test_integration.py  test_itguy_plugin.py  test_loader.py  test_matcher.py  test_music_discovery.py  test_oauth_server.py  test_observability.py  test_pipeline.py  test_plugins_base.py  test_printer.py  test_printer_status.py  test_progress.py  test_real_men.py  test_slack_transport.py  test_sports.py  test_spotify.py  test_transport_loader.py  test_youtube_tv.py
