[project]
name = "sandy"
version = "0.1.0"
description = "CLI tool that routes text commands to plugins"
requires-python = ">=3.13"
dependencies = ["spotipy>=2.24.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
sandy = "sandy.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
