[project]
name = "sandy"
version = "0.1.0"
description = "CLI tool that routes text commands to plugins"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "aiohttp>=3.9.0",
    "slack-bolt>=1.27.0",
    "spotipy>=2.24.0",
    "pylast>=7.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sandy --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["sandy"]
omit = ["sandy/plugins/__init__.py", "sandy/__init__.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[project.scripts]
sandy = "sandy.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "pre-commit>=4.0.0",
]
