[project]
name = "sandy"
version = "0.1.0"
description = "CLI tool that routes text commands to plugins"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.34.2",
    "aiohttp>=3.14.1",
    "slack-bolt>=1.28.0",
    "spotipy>=2.26.0",
    "pylast>=7.0.2",
    "pychromecast>=14.0.10",
    "sentry-sdk>=2.62.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sandy --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["sandy"]
omit = ["sandy/plugins/__init__.py", "sandy/__init__.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[project.scripts]
sandy = "sandy.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "pre-commit>=4.6.0",
    "pytest-asyncio>=1.4.0",
]
